# gothic

./: .gitignore  .travis.yml  Gothic.cabal  LICENSE  NIX_MIGRATION.md  ReadMe.md  Vault-KV-Client.cabal  Vault-KVv2-Client.cabal  flake.nix  gothic.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
Database/Vault/: Connection.hs
Database/Vault/KV/: V2.hs
Database/Vault/KV/V2/: Types.hs
Database/Vault/KVv2/: Client.hs
Database/Vault/KVv2/Client/: Connection.hs  Internal.hs  Lens.hs  Requests.hs  Types.hs
src/Database/Vault/KVv2/: Client.hs
src/Database/Vault/KVv2/Client/: Internal.hs  Lens.hs  Requests.hs  Types.hs
