name:                Vault-KVv2-Client
version:             0.1.0
synopsis:            A Haskell client library for the Hashicorp Vault
description:         A Haskell client library for the Hashicorp Vault
homepage:            https://github.com/MichelBoucey/Vault-KVv2-Client
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
copyright:           (c) 2019 - Michel Boucey
category:            Database, Security
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ReadMe.md

Source-Repository head
  Type: git
  Location: https://github.com/MichelBoucey/Vault-KVv2-Client

library
  exposed-modules:    Database.Vault.KVv2.Client
                    , Database.Vault.KVv2.Client.Types
                    , Database.Vault.KVv2.Client.Connection
  other-extensions:   OverloadedStrings
  build-depends:      aeson >= 0.8.0.2 && < 1.5
                    , base >= 4.8.1.0 && < 5
                    , connection
                    , exceptions
                    , http-client
                    , http-client-tls
                    , http-types
                    , bytestring
                    , http-conduit
                    , text
                    , unordered-containers
                    , lens
                    , lens-aeson
                    , scientific
                    , vector

  default-language:   Haskell2010
  GHC-Options:        -Wall
