name:                gothic
version:             0.1.0
synopsis:            A Haskell Vault KV v2 secret engine client
description:         A Haskell HashiCorp Vault KV v2 secret engine client library
homepage:            https://github.com/MichelBoucey/Gothic
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
copyright:           (c) 2019 - Michel Boucey
category:            Database, Security
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ReadMe.md

Source-Repository head
  Type: git
  Location: https://github.com/MichelBoucey/Gothic

library
  exposed-modules:    Database.Vault.KVv2.Client.Requests
                    , Database.Vault.KVv2.Client.Types
                    , Database.Vault.KVv2.Client.Internal
  other-extensions:   OverloadedStrings
  build-depends:      aeson >= 0.8.0.2 && < 1.5
                    , base >= 4.8.1.0 && < 5
                    , connection
                    , exceptions
                    , http-conduit
                    , http-client
                    , http-client-tls
                    , http-types
                    , bytestring
                    , http-conduit
                    , text
                    , unordered-containers
                    , lens
                    , lens-aeson
                    , scientific
                    , unix
                    , vector

  default-language:   Haskell2010
  GHC-Options:        -Wall
